# blog

./: .gitignore  404.html  Makefile  README.md  biome.json  index.html  mkdocs.yml  package.json  pyproject.toml  sitemap.xml  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: aws-notes--what-s-missing-.md
.github/workflows/: cd.yaml  cd.yml  ci.yml
certifications/: index.html
docs/: .authors.yml  .meta.yml  _config.yml  experience.md  index.md  interests.md  tech-stack.md  tech_stack.md
docs/_posts/: 2022-09-13-SKILLS.md
docs/notes-aws/: shared-responsability-model.md
docs/notes-aws/well-architected-framework/: conclusion.md  framework.md  review-process.md  well-architected-tool.md
docs/notes_aws/: shared_responsability_model.md
docs/notes_aws/well_architected_framework/: framework.md
docs/projects/: loan-management-system.md
experience/: index.html
interests/: index.html
messages/: en.json  es.json
notes-aws/shared-responsability-model/: index.html
notes-aws/well-architected-framework/conclusion/: index.html
notes-aws/well-architected-framework/framework/: index.html
notes-aws/well-architected-framework/review-process/: index.html
notes-aws/well-architected-framework/well-architected-tool/: index.html
projects/loan-management-system/: index.html
scripts/: release.ts  tsconfig.json
site/: 404.html  index.html
src/lib/: Header.svelte
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  layout.css
stylesheets/: extra.css
tech-stack/: index.html
todos/: README.md
(+138 files in other folders)
