[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Tomas Perez Alvarez <tomasperezalvarez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
